--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^9.3.0"
   },
   "private": true
 }
