--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/react": "~18.0.27",
     "expo": "~48.0.6",
+    "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "i18n-js": "^4.2.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.3",
