--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "@types/react": "~18.0.27",
     "expo": "~48.0.6",
     "expo-localization": "~14.1.1",
@@ -20,7 +22,8 @@
     "react-native": "0.71.3",
     "react-native-device-info": "^10.4.0",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "typescript": "^4.9.4"
   },
