--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@realm/react": "^0.4.3",
     "@types/react": "~18.0.27",
     "expo": "~48.0.6",
     "expo-localization": "~14.1.1",
@@ -25,6 +26,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-uuid": "^2.0.1",
+    "realm": "^11.5.2",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
