--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "i18n-js": "^4.2.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "^0.71.4",
     "react-native-device-info": "^10.4.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-safe-area-context": "^4.5.0",
