--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@realm/react": "^0.4.3",
     "@types/react": "~18.0.27",
     "expo": "~48.0.6",
+    "expo-font": "~11.1.1",
     "expo-localization": "~14.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
