--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "expo": "~48.0.6",
     "expo-font": "~11.1.1",
     "expo-localization": "~14.1.1",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "i18n-js": "^4.2.3",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "^0.71.4",
+    "react-native": "0.71.7",
     "react-native-device-info": "^10.4.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-safe-area-context": "^4.5.0",
