--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
     "@types/react": "~18.0.27",
     "expo": "~48.0.6",
@@ -27,7 +28,7 @@
     "react-native-device-info": "^10.4.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "realm": "^11.5.2",
